[package]
name = "gp2y1014au"
version = "0.1.0"
authors = ["Melody Heath <melodyaheath@gmail.com>"]
edition = "2018"

description = "gp2y1014au dust sensor reader using embedded hal"
documentation = "https://docs.rs/gp2y1014au"
readme = "README.md"
keywords = ["embedded_hal", "gp2y1014au", "dust", "dust_sensor"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/melodyaheath/embedded-rust-gp2y1014au"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal= { version = "0.2.*", features=["unproven"]}
nb="1.0.*"